change review details font size to 20px, fix avatar styling caused by overlap

--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -11,12 +11,12 @@
 
 .avatar-bordered {
   border-radius: 50%;
-  box-shadow: 0 5px 17px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0px 14px rgba(0, 0, 0, 0.2);
   object-fit: cover;
   height: 60px;
   position: relative;
   left: 10px;
-  margin-left: -13px;
+  margin-left: -10px;
   z-index: 1;
   border: 2px solid #41957b;
 }
